--- a/A_Book_of_Changes.org
+++ b/A_Book_of_Changes.org
@@ -1,6 +1,6 @@
 ; -*- mode: Org; eval: (visual-line-mode); -*-
 #+OPTIONS: skip:t
-#+TEXT: Looking For A Manger, by Tony Price//A Novel for NaNoWriMo 2016
+#+TEXT: A Book of Changes, by Tony Price//A Novel for NaNoWriMo 2016
 #+TEXT: [TABLE-OF-CONTENTS]
 
 * Chapter One     The End of the World
@@ -295,7 +295,7 @@ By the time all this had happened, Joseph had left the island. While so many of 
 
 On Day One of the Restitution, Joseph had indeed turned on the TV initially to see if there was any news of the Volcano, and a possible resumption of air flights. Nothing happened: the screen stayed blank. He poked the remote control at it, pressed all the buttons he could think of. He went over to the set to check it was plugged in and give it a slap. When that was unsuccessful, he stood up with a curse to go and check the fuse box... and there was Hildegard.
 
-"it's time to go," she said. "The world is changed. I feel it in the water. I feel it in the earth. I smell it in the air. Much that once was is lost, for none now live who remember it... Joseph! Wake up! I am not Galdriel. But dark times /are/ coming. This is not a time to stay in this country. If you value the things we stood for, the things we always truly desired, you must leave now. This will not be safe for anyone who does not consent."
+"it's time to go," she said. "The world is changed. I feel it in the water. I feel it in the earth. I smell it in the air. Much that once was is lost, for none now live who remember it... Joseph! Wake up! I am not Galadriel. But dark times /are/ coming. This is not a time to stay in this country. If you value the things we stood for, the things we always truly desired, you must leave now. This will not be safe for anyone who does not consent."
 
 If ever there was a time he wanted to ask her what she meant, this was it. But she had already gone.
 
@@ -2075,6 +2075,111 @@ surely lives forever
 
 The Dragon Lord lived well, and simply, his life filled with purpose, joy and deep gratitude. He lived long. But the Sage knows that 'living forever' may not be the never-ending bodily existence that the Dark Lord Marduk had so long desired. Joseph did not desire death, but neither did he fear it.
 
-A day came when he knew the time had come for the next stage of his pilgrimage. He set out from the Jade Empress's palace in Aachen, taking with him only his staff, his backpack with its two slim volumes (leaving the thicker volume behind), and his mobile phone with the Leibniz Hologram to guide him. Through all the years, and especially after Master Liu too had died, Leibniz had remained his principal friend, confidant and guide.
+A day came when he knew the time had come for the next stage of his earthly way, his pilgrimage, as he had once thought of it. He set out from the Jade Empress's palace in Aachen, taking with him only his staff, his backpack with its two slim volumes (leaving the thicker volume behind), and his mobile phone with the Leibniz Hologram to guide him. Through all the years, and especially after Master Liu too had died, Leibniz had remained his principal friend, confidant and guide.
 
-He told no one where he was going, left only a package to be opened in the event of his death being reported and known, and walked off in the direction of the rising sun. He had thought when he first left home, those few months after Hildegard's death, that his way would lead him eventually to her Lithuanian birthplace. Sometimes, in the intervening years, it was as if he had forgotten that plan. Now the promise he had half made to himself, that he would one day go back to where she had come from, perhaps because it might bring some rounding-off to her story, some healing for his own grief, would be fulfilled.
+He told no one where he was going, left only a package to be opened in the event of his death being reported and known, and walked off in the direction of the rising sun. He had thought when he first left home, those few months after Hildegard's death, that his way would lead him eventually to her Lithuanian birthplace. Sometimes, in the intervening years, it was as if he had forgotten that plan. Now the promise he had half made to himself, that he would one day go back to where she had come from, perhaps because it might bring some resolution to her story, some healing for his own grief, would be fulfilled.
+
+Walking at a steady 25 kilometres a day, he walked across Germany, taking the time to reflect, to meditate, to pray as he walked, turning over in his mind the sacred words of the two slim volumes he carried, which he almost knew by heart. He met people on the way, walked and talked and ate with some, and blessed them all. Some of them recognised him from his appearances on TV in company with the Jade Empress; most did not; but there was hardly one who did not remember in later years "that man we met who was walking across Germany", and who had given each of them some special word of encouragement, praise, or direction.
+
+His first destination was Bialystok in Poland, the birthplace of one of the men who had made him what he was: Ludvik Ljezer Zamenhof. It was there that the young Jewish originator of Esperanto was born in 1859, the same year that saw the publication of Charles Darwin's /Origin of Species/. But not for Zamenhof, the comfortable, peaceful, middle-class English life that Darwin enjoyed. Four different ethnic and linguistic groups populated the town at that time, under the oppressive rule of Tsarist Russia. Russians, Poles, Germans, and Yiddish-speaking Jews. The four groups were often at odds with each other, but three of them at least shared one thing in common: their hatred of the Jews. In the wider world this could lead to violence and outright persecution of the form of pogroms. In the local community, it was a daily cause of friction, intolerance, and minor acts of vandalism or discrimination. The teenaged Zamenhof was convinced that the major cause of the difficulties was simply the failure to understand each other. If only they could understand each other, he believed, most of the divisions and hatreds could be overcome. As it was, even if the subject peoples learned Russian, they would be disadvantaged in comparison with the native Russian speakers.
+
+He experimented with inventing his own language, one that would be simple enough even for ordinary people to learn well enough to communicate in it. He worked on his invention for twenty years, before he thought it was sufficiently developed to present it to the world at large. And the rest is history, Joseph had sometimes said when telling the story. Though it was a long and complex and fascinating history, not least because Zamenhof had taken the extraordinary, and humble decision, to let go of his beloved baby. Instead of needing to control its development, be the continuing arbiter of its development, he was content to establish the very basic foundations and get his fellow-Esperantists to agree that this much at least should never be changed. And then to relinquish control, so that the speakers and users of the language were able to develop it in the ways that any living language develops. 
+
+Kaj, Esperanto estas vivanta lingvo!
+
+It was Joseph's first visit to Bialystok, the largest city in northeastern Poland and the capital of the Podlaskie Voivodeship, so he decided to do the regular tourist thing. He took the city's Esperanto Trail, visiting the site where the wooden house had stood on Bialystok Street, in which Zamenhof was born; the park between Malmeda and Bialowny Street, where the imposing monument with the bust of Zamenhof, looking like some Old Testament prophet immortalised in stone. The Trail ended at the Ludwik Zamenhof Centre at 19 Warszawska Street, where there were permanent displays about Zamenhof's life, and a library of Esperanto books. All of this had grown in importance, and several extensions had been built, since Esperanto had become to medium of communication between the different language groups of the Empire.
+
+From the Centre, Joseph dropped out of tourist mode into that of the pilgrim. He returned to Ludvik Zamenhof Square, and spent some time sitting on a bench contemplating the bust on top of the monument. Then he placed a flower at the foot of the plinth, and a pebble he had brought from outside the Cathedral at Aachen.
+
+He lingered two days in Bialystok before he realised that he was putting off the last part of his journey, without fully knowing why. Then he checked out of his hotel and set off on the last part of his long walk, to Birštonas in neighbouring Lithuania. It took him a week to walk the 212 kilometres, and each day the distance seemed longer, his feet and his pack heavier. So he knew that his time in the city would be heavy with meaning.
+
+And yet, when he came into its streets and began to look for signs of Hildegard, or to try to find any of her family or relatives who remained, he found no one. He asked in the hotels, the inns, the cafes, the libraries, the schools, and the town hall. No one seemed to have even heard of the Grinius family, who had emigrated to the United States just before the collapse of the Soviet Bloc, and whose daughter Hildegard had married an Englishman. No one knew if any aunts or uncles or cousins remained in Birštonas. It was a town in which there had always been a lively Esperanto speaking community, back when it was a small and relatively easy way to carry out some subversive act against Soviet oppression. It almost seemed as if, now that the language had become so important a means of commuication in all the countries of the Empire, that old interest in it had atrophied. Joseph smiled grimly at the vicissitudes of the Changes.
+
+Had his long walk been for nothing? Or had the whole idea of visiting Hildegard's hometown, in search of some knowledge or resolution, been just a mistake?
+
+On the third day he found his way to the St Nicholas Evangelical Lutheran Church, a small, almost invisible building on edge of the town. Joseph vaguely remembered Hidegard telling him, many many years before, that she had been baptised in the local Lutheran church, in this town where the majority of the population were Roman Catholics.
+He found the church door unlocked, and went inside into the dark interior, that smelled of dust and wood polish. He sat down on a chair somewhere near the font, and composed himself for a time of quiet thought.
+
+When he opened his eyes, he saw a young woman sitting a few rows in front of him. He could see at once that it was Hildegard: not as he had last seen her in the church in Herrnhut, but as he had first seen her, in life, at the Esperanto Congress in Belgrade. She was a beautiful to him now as she had been all those years ago.
+
+She turned and smiled at him. "So you've come. I knew you would."
+
+"Yes, I promised myself that, after you left... After you..."
+
+"After I /died/, Joseph. Let's not pretend."
+
+They sat for some minutes in silence, looking at each other, then as if by agreement they stood and moved close, almost touching.
+
+"This way you have come," she asked, "ĉi tiu vojo, kiu estis via kaj mia vojo... kiu vi pensas pri tion?"
+
+"What do I think of it? It is the Way. I thought it was I who had to find the Way, after you died. But you were right - you were always right: this Way found me."
+
+"And you have walked it, to the end. Or at least, to this end."
+
+"I have walked it."
+
+"Is it well?"
+
+"It is the Way."
+
+"I think you have become a man of fewer words. That's good. But this I have wondered: have you been true, Joseph?"
+
+"What do you mean?"
+
+"When I died, you often said of me that I loved Truth above all things. That we were always honest with each other, we had no secrets, there was no Lie. And when you went in search of the Tao, you were driven by that desire for truth. Tao is all things, but I do not think it can sit well with falsehood. So, Joseph, have you indeed been true?"
+
+The question stung him like the slap of a wet twig. He went into himself, looking as deep as he could within his heart-and-mind, into the Tao that was in him. In that place had grown a wondrous pearl, a pearl of greatest price for him and for the world. The pearl that was the Empire: a path to a society of peace, justice, freedom, equality, prosperity for all; the way to build an international community which, if it had the will and the strength to continue, might promise years, generations, centuries of peace and blessing for humanity.
+
+Deeper still he looked, into the heart of the Pearl itself. Was it true that every pearl was formed around some minute grain of grit in the oyster's flesh? What grit had been the seed of this Pearl?
+
+And then he knew.
+
+"For you - for us, Hildegard - I have tried to be true. Indeed, I had thought I /was/ true. But what mortal man can be true and nothing but true?"
+
+"Tell me."
+
+"When you died... when you died, I let everyone think that our marriage, our life together, our love for one another, were all perfect. It was easy for them to believe, and it was what I was happy for them to believe; it was what I wanted to believe myself. It was not a big lie. I don't believe it did much harm. But, it was not true."
+
+"And the truth is?"
+
+"We loved as well as we could. We were damaged, as all people are, by our genes, by our upbringing, by the damage our parents and nurturers had suffered in turn, by the hurts others inflicted upon us, and the hurts we inflicted on ourselves. But perfect? Doesn't Story tell us that the most perfect loves that have ever been, have been the worst disasters? Tristan and Isolde, Lancelot and Guinevere, Romeo and Juliet? Thank God, our love was not perfect. We were neither of us the lover, the husband or the wife, we wanted to be or to have. But we were good enough. We loved well enough."
+
+Hildegard leaned towards him, and her lips gently touched his in the softest, sweetest of kisses. "Good. It is when you know that, that you can at last grieve so that your grief will heal, not harm. It was, indeed, a Lie, a little Lie, that you held in your heart for so long. But sometimes we are allowed to hold on to the Lie. For look: what a Pearl that grit made grow!"
+
+She turned and gestured towards the sanctuary, where, as if projected on an invisible screen, he saw the forms of their children, and grandchildren, and now great-grandchildren. They were individuals and families like so many others, with all the joys and struggles and trials and triumphs that everyone else knew. But they were /their/ seed, the fruit of their love. And, because Joseph's Way had led through the brink of chaos and disaster to the Empire of hope that he had helped build, there was the chance that their generations would know a peace that the world had never seen in all its history.
+
+"Look!" said Hildegard. "Rigardu ĉion, kio ni faris! Look what we made."
+
+They looked, and there were tears in both their eyes, his and hers.
+
+After a long time, she said. "It is time, now. No?"
+
+He nodded, and took her hand, and she led him towards the sanctuary, and within. There was a small door in the side wall, and through this they walked together.
+
+If you had tried to follow them, you would have found it like the door in the church in Herrnhut. Locked.
+
+* Acknowledgements
+
+How could anyone write before the Internet? This fiction would not have been possible if I had not been able to carry out instant research, and get instant answers to my questions, from Google. I was able to plan Joseph's journeys with the help of Google Maps, and even visit cities and places I have never been, popping into Streetview and describing what I could see there.
+
+So thank you, Sir Tim Berners-Lee, for the World Wide Web.
+
+Google, for everything
+
+Wikipedia, for everything else
+
+Ludvik Ljezer Zamenhof, for la lingvo internacia
+
+NaNoWriMo, for the challenge and the motivation
+
+Alison, for putting up with my days of 'having to write'
+
+Star Trek Voyager, for the Emergency Hologram
+
+Neal Stephenson, for /The Baroque Trilogy/ and Leibniz
+
+Sam Green, for his documentary film on Esperanto, /The International Language/
+
+/Tao Te Ching/ for the wisdom of the Way
+
+Inspiration and creativity are shameless magpies. Attentive readers will no doubt spot many other things lost, borrowed, stolen or strayed on their Path through this tale.
