further corrections to .md

--- a/A_Book_of_Changes.org
+++ b/A_Book_of_Changes.org
@@ -778,7 +778,7 @@ So. Where was he going now? The way lies eastwards, Hildegard had said. The them
 
 It was as he was standing on the inner ring road, waiting to brave the constant flow of traffic and set off down Adalbertsteinweg, that he suddenly thought, I don't have to walk! No doubt Herr Doktor Leibniz, if it /is/ he steering, has forgotten about railways. And he turned right, making for the Hauptbahnhof.
 
-NOn the way, he suddenly knew where he was to go. It was in search of another place connected to their heart language.
+XOn the way, he suddenly knew where he was to go. It was in search of another place connected to their heart language.
 
 
 * Chapter Twelve     Esperanto Stadt
